tests/reference/asr_preprocess-cpp3-79a5a7a.stderr
warning: Implied save feature
 --> tests/errors/cpp3.f90:4:1
  |
4 | integer :: x, y
  | ^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/cpp3.f90:4:1
  |
4 | integer :: x, y
  | ^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: Variable 'xx' is not declared
 --> tests/errors/cpp3.f90:7:10
  |
7 | print *, xx, X123, y
  |          ^^ 'xx' is undeclared
